<resources>
    <string name="app_name">Calendar</string>
    <string name="back"><![CDATA[←]]></string>
    <string name="forward"><![CDATA[→]]></string>
    <string name="sunday">SUN</string>
    <string name="saturday">SAT</string>
    <string name="friday">FRI</string>
    <string name="thursday">THUR</string>
    <string name="wednesday">WED</string>
    <string name="tuesday">TUE</string>
    <string name="monday">MON</string>
    <string name="inputDate">Feb 2021</string>
    <string name="calendarType">Weekly</string>
    <string name="newEvent">NEW EVENT</string>
    <string name="save">SAVE</string>
    <string name="event">Event</string>
    <string name="time">Time</string>
    <string name="calendarTypeDaily">Daily</string>
    <string name="fullMonday">Monday</string>
    <string name="hour">10:00</string>
    <string name="event1">Event1</string>
    <string name="event2">Event2</string>
    <string name="event3">Event3</string>
    <string name="trashbin">🗑</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>