<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/hour"
        android:textColor="@color/black" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rice_white"
        android:padding="5dp">

        <TextView
            android:id="@+id/scheduledEvent1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/pink"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:lines="2"
            android:gravity="center"
            android:text="@string/event1"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/scheduledEvent2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/pink"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:lines="2"
            android:gravity="center"
            android:text="@string/event2"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/scheduledEvent3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/pink"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:lines="2"
            android:gravity="center"
            android:text="@string/event3"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>